# xero-rpt-cm

./: .gitignore  CLAUDE.md  README.md  Run-Mapping.ps1  audit_heuristics.py  context_rules.py  file_handler.py  integrity_validator.py  mapping_logic_v15.py  postprocess_outputs.py  pyproject.toml  rule_engine.py  rules.py  run_mapping.bat  run_mapping.ps1  spell_corrections.py  synonyms.py
.claude/: settings.json
.claude/agents/: rule-integrity-checker.md
ChartOfAccounts/: Company.csv  Partnership.csv  SoleTrader.csv  Trust.csv  XeroHandi.csv
SystemFiles/: Account_Types_Head.csv  Account_Types_per_Financial-Reports.json  SystemMappings.csv
data/: seed_synonyms.py  synonyms.db
docs/: ARCHITECTURE.md  ML_MODEL_GUIDE.md  STAFF_GUIDE.md
examples/: ChartOfAccounts_NoArchive.csv  TrialBalance_NoArchived.xlsx
financial-reports/: Report01_Trading-Statement.json  Report02_Detailed-Profit-and-Loss.json  Report03_Balance-Sheet.json
prompts/: broken_chartofaccounts_procedure.md  job-specific_report-code-mapper.md  python-web-version_XeroMapper.md  python_expert.md
tests/: conftest.py  report.html  test_cross_account.py  test_fixtures.py  test_integration.py  test_rule_engine.py  test_rules.py  test_rules_integrity.py  test_spellcheck.py  test_synonyms.py
tools/: apply_decisions.py  fix_broken_chart.py  gen_mismatch_report.py  gen_review_report.py  generate_account_type_rules.py  sanitize_dev_info.py
web/: package-lock.json  package.json  vite.config.ts
web/data/: rules.json
web_interface/: app.js  complete_standalone.html  index.html  server.py  styles.css
(+73 files in other folders)
