[project]
name = "xero-report-code-mapping"
version = "0.1.0"
description = "Assign Xero reporting codes to client Charts of Accounts using heuristic matching and template charts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "openpyxl>=3.1.2",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "transformers>=4.30.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
