[project]
name = "xero-report-code-mapping"
version = "0.1.0"
description = "Assign Xero reporting codes to client Charts of Accounts using heuristic matching and template charts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-html>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "--html=tests/report.html --self-contained-html"
testpaths = ["tests"]
